Memoize different urls and make QR code a link too
People may access the page using different urls (e.g. localhost, domain
etc). This means we want to regenerate the QR code if the URL was not
encountered before.

Also make it a link so that we don't have to scan it when playing with
it locally.

Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -2,8 +2,11 @@
 
 [[define "body"]]
 
-The quiz here
+Scan the following QR code to start a quiz:
+
+<a href="[[ .NewQuizURL ]]">
 <img src="data:image/png;base64,[[ .QRCodePNG ]]" alt="QR Code">
+</a>
 [[ end ]]
 
 [[define "page-javascript"]]
