Add email submission form
Signed-off-by: Dimitris Karakasilis <dimitris@karakasilis.me>

--- a/views/quizzes/show.html
+++ b/views/quizzes/show.html
@@ -1,9 +1,12 @@
 [[define "title"]]Quiz[[end]]
 
 [[define "body"]]
+[[ with .Quiz.Questions ]]
+  [[ range . ]]
+  <p>[[ .Text ]]</p>
+  [[ end ]]
+[[ end ]]
 
-
-The quiz questions here
 [[end]]
 
 [[define "page-javascript"]]
