--- a/views/home/index.html
+++ b/views/home/index.html
@@ -1,12 +1,16 @@
 [[define "title"]]QuizMaker[[end]]
 
 [[define "body"]]
-
-Scan the following QR code to start a quiz:
-
-<a href="[[ .NewQuizURL ]]">
-<img src="data:image/png;base64,[[ .QRCodePNG ]]" alt="QR Code">
-</a>
+<div class="bg-gray-800 p-8">
+  <div class="flex items-center justify-center space-x-4">
+    <p class="text-xl font-medium center">Scan the following QR code to start a quiz:</p>
+    <p class="text-slate-500">
+      <a href="[[ .NewQuizURL ]]">
+        <img src="data:image/png;base64,[[ .QRCodePNG ]]" alt="QR Code" class="w-512 h-512">
+      </a>
+    </p>
+  </div>
+</div>
 [[ end ]]
 
 [[define "page-javascript"]]
