--- a/views/main_layout.html
+++ b/views/main_layout.html
@@ -15,26 +15,16 @@
     <!-- https://tailwindcss.com/docs/installation/play-cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-900 text-white flex justify-center min-h-screen">
-    <div class="w-full lg:w-1/2 p-4">
-      <header class="mb-8">
-        <div class="flex items-center justify-between">
-          <!-- Logo Section -->
-          <div class="flex-1 flex justify-center">
-            <img src="/assets/images/logo.png" alt="Logo" class="w-80 object-contain">
-          </div>
 
-          [[template "QRCode" .]]
-        </div>
-      </header>
 
-      <main class="space-y-4">
-        <div class="bg-gray-800 p-4 rounded shadow-md">
-          [[template "body" .]]
-        </div>
-      </main>
+  <body class="bg-gray-100">
+    <div class="bg-gray-50 py-12 sm:py-24">
+    <div class="mx-auto max-w-2xl px-6 lg:max-w-7xl lg:px-8">
+      <h2 class="text-center text-base/7 font-semibold text-gray-500">kairos.io</h2>
+      <p class="mx-auto mt-2 max-w-lg text-balance text-center text-4xl font-semibold tracking-tight text-gray-950 sm:text-5xl">More than an <span class="text-orange-600">edge OS</span></p>
+            [[template "body" .]]
     </div>
-
+  </div>
     [[template "page-javascript" .]]
   </body>
 </html>
