--- a/views/quizzes/result.html
+++ b/views/quizzes/result.html
@@ -1,49 +1,54 @@
 [[define "title"]]Quiz Results[[end]]
 
 [[define "body"]]
-<div class="bg-gray-800 p-8 relative">
-  <!-- Container for Results Header and Score -->
-  <div class="flex flex-col items-center">
-    <h1 class="text-3xl font-bold mb-4 text-white">Quiz Results</h1>
-    <div class="bg-gray-700 text-white text-xl font-semibold px-6 py-3 rounded-lg shadow-lg">
-      Total Score: [[ .ScorePercentage ]]%
-    </div>
-  </div>
-
-  <!-- Results Container -->
-  <div class="space-y-6 mt-6">
-    [[ range $i, $q := .Session.Questions ]]
-      <div class="bg-gray-900 p-6 rounded-lg shadow-lg">
-        <h2 class="text-xl font-bold text-white mb-4">Question [[ add $i 1 ]]: [[ $q.Text ]]</h2>
-
-        <!-- User's Answer -->
-        <div class="mb-2">
-          <strong class="text-white">Your Answer:</strong>
-          [[ if ne $q.UserAnswer 0 ]]
-          [[ $aIdx := sub $q.UserAnswer 1 ]]
-          <p class="text-gray-400">[[ index $q.Answers $aIdx ]]</p>
-          [[ else ]]
-          <p class="text-gray-400">none</p>
-          [[ end ]]
+<div class="mt-10 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-1">
+  <div class="relative max-lg:row-start-1 col-span-3">
+    <div class="absolute inset-px rounded-lg bg-white"></div>
+    <div class="relative flex h-full flex-col overflow-hidden">
+      <div class="px-8 pb-3 pt-8 sm:px-10 sm:pb-0 sm:pt-10">
+        <!-- Container for Results Header and Score -->
+        <div class="flex flex-col items-center">
+          <h1 class="text-3xl font-bold mb-4">Quiz Results</h1>
+          <div class="bg-sky-400 text-white text-xl font-semibold px-6 py-3 rounded-lg shadow-lg">
+            Total Score: [[ .ScorePercentage ]]%
+          </div>
         </div>
 
-        <!-- Correct Answer -->
-        <div class="mb-2">
-          <strong class="text-green-400">Correct Answer:</strong>
-          [[ $idx := sub $q.RightAnswer 1 ]]
-          <p class="text-gray-400">[[ index $q.Answers $idx ]]</p>
-        </div>
+        <div class="space-y-6 mt-6">
+          [[ range $i, $q := .Session.Questions ]]
+            [[ if eq $q.RightAnswer $q.UserAnswer ]]
+            <div id="answer" class="relative bg-green-100 p-6 rounded-lg shadow-lg">
+            [[ else ]]
+            <div id="answer" class="relative bg-rose-200 p-6 rounded-lg shadow-lg">
+            [[ end ]]
+            <div class="absolute top-0 right-0 p-2 bg-gray-200">Question [[ add $i 1 ]] </div>
+            <div class="flex items-center justify-between">
+              <div class="text-xl font-bold mb-4">[[ $q.Text ]]</div>
+            </div>
+              <!-- Correct Answer -->
+              <div class="mb-2">
+                [[ $idx := sub $q.RightAnswer 1 ]]
+                <p class="text-xl">[[ index $q.Answers $idx ]]</p>
+              </div>
 
-        <!-- Indicate Correct/Incorrect -->
-        <div class="mt-2">
-          [[ if eq $q.RightAnswer $q.UserAnswer ]]
-            <span class="text-green-500 font-semibold">Correct!</span>
-          [[ else ]]
-            <span class="text-red-500 font-semibold">Incorrect!</span>
+              [[ if not (eq $q.RightAnswer $q.UserAnswer) ]]
+              <!-- User's Answer -->
+              <div class="mb-2">
+                [[ if ne $q.UserAnswer 0 ]]
+                <p class=""><strong class="">You answered:</strong>
+                [[ $aIdx := sub $q.UserAnswer 1 ]]
+                [[ index $q.Answers $aIdx ]]
+                [[ else ]]
+                You did not answer this question.
+                [[ end ]]
+                </p>
+              </div>
+              [[ end ]]
+            </div>
           [[ end ]]
         </div>
       </div>
-    [[ end ]]
+    </div>
   </div>
 </div>
 [[end]]
