Make it more generic
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/views/quizzes/result.html
+++ b/views/quizzes/result.html
@@ -31,7 +31,7 @@
                 <p class="text-xl">
                   [[ index $q.Answers $idx ]]
                   [[ if not (eq $q.Source "") ]]
-                  <span class="text-sm"><a href="[[ $q.Source ]]" target="_blank" class="text-blue-500 underline">Read the docs</a></span>
+                  <span class="text-sm"><a href="[[ $q.Source ]]" target="_blank" class="text-blue-500 underline">Learn more</a></span>
                   [[ end ]]
                 </p>
               </div>
